--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lil-gui": "^0.20.0",
     "lit": "^3.2.1",
+    "simplex-noise": "^4.0.3",
     "three": "^0.174.0"
   },
   "devDependencies": {
